--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "tghbot",
   "version": "1.0.0",
   "description": "GamerHive Bot",
-  "main": "main.js",
+  "main": "src/bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ."
   },
   "author": "ShadiKiller",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/rest": "^1.0.1",
+    "chalk": "^4.1.2",
+    "discord-api-types": "^0.37.2",
     "discord.js": "^14.2.0",
     "dotenv": "^16.0.1"
   }
